--- a/gb/14/6/11/n4176216.md
+++ b/gb/14/6/11/n4176216.md
@@ -1,56 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/gvyvpc327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gvyvpc327/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gvyvpc327/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gvyvpc327/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gvyvpc327/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gvyvpc327/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>花东铁路秀愿景 朝一日生活圈迈进</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2014年06月11日讯】（大纪元记者龙芳台湾<ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）“<ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E8%8A%B1%E4%B8%9C%E9%93%81%E8%B7%AF.md#1">花东铁路</a>愿景馆”11日在台湾史前文化博物馆开馆，展出花东铁路的过去、现在和未来。从回顾花东铁路发展史、展出铁道文物，再介绍东部铁路三大计划工程，同时设有互动区和影视区，带民众体验从回忆旧铁道走向未来新愿景。</p> <p>花东铁路迈向新纪元，花东铁路<ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>即将在28日通车。交通部长叶匡时表示，虽然比西部慢了几十年，但总比没有好，未来将持续推动<ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a><ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>，彻底解决<ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>民众交通需求。</p> <p>叶匡时强调，花东铁路电气化通车后，运量增加40%，一定可纾解一票难求的问题。但交通方便会带来观光客和返乡民众的增加，未来又会有新的挑战。交通部铁路改建工程局指出，<ahref="https://github.com/gvyvpc327/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a>电气化工程预定2023年完工，不但可提升东部观光能量，环岛铁路网一日生活圈也不再是梦想。</p> <p>“花东铁路愿景馆”即日起在台湾史前文化博物馆一连展出2年，分4大展期，每半年会更换部分内容，以展现最新的花东铁路建设成果。◇</p> <p>（责任编辑：杜文卿）</p> 
+<p>【大纪元2014年06月11日讯】（大纪元记者龙芳台湾<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8A%B1%E4%B8%9C%E9%93%81%E8%B7%AF.md#1">花东铁路</a>愿景馆”11日在台湾史前文化博物馆开馆，展出花东铁路的过去、现在和未来。从回顾花东铁路发展史、展出铁道文物，再介绍东部铁路三大计划工程，同时设有互动区和影视区，带民众体验从回忆旧铁道走向未来新愿景。</p>
+<figure id="attachment_5734646" aria-describedby="caption-attachment-5734646" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/06/1406111051161758-600x460.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5734646" class="wp-caption-text"><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8A%B1%E4%B8%9C%E9%93%81%E8%B7%AF.md#1">花东铁路</a>愿景馆”展出花东铁路的过去、现在和未来。（龙芳／大纪元）</figcaption></figure>
+<p>花东铁路迈向新纪元，花东铁路<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>即将在28日通车。交通部长叶匡时表示，虽然比西部慢了几十年，但总比没有好，未来将持续推动<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%94%B5%E6%B0%94%E5%8C%96.md#1">电气化</a>，彻底解决<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>民众交通需求。</p>
+<p>叶匡时强调，花东铁路电气化通车后，运量增加40%，一定可纾解一票难求的问题。但交通方便会带来观光客和返乡民众的增加，未来又会有新的挑战。交通部铁路改建工程局指出，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8D%97%E5%9B%9E%E9%93%81%E8%B7%AF.md#1">南回铁路</a>电气化工程预定2023年完工，不但可提升东部观光能量，环岛铁路网一日生活圈也不再是梦想。</p>
+<p>“花东铁路愿景馆”即日起在台湾史前文化博物馆一连展出2年，分4大展期，每半年会更换部分内容，以展现最新的花东铁路建设成果。◇</p>
+<p>（责任编辑：杜文卿）</p>
+
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/9/9/7/n2649202.md#1">南回铁路重建进度超前 台东段9/16通车</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/9/9/14/n2656780.md#1">南回铁路台东段15日通车  前3天免费</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/9/9/15/n2657619.md#1">南回铁路台东段通车  民众组团搭车</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/4/19/n4135387.md#1">电气化将通车  花东一日生活圈</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/4/28/n4142378.md#1">花莲南平站  2人感电灼伤</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/4/29/n4143103.md#1">花东线电气化  争改东华大学站</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/5/13/n4154119.md#1">花东铁路电气化  普悠玛88折</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/5/13/n4154612.md#1">普悠玛首优惠  88折惠7千人</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/5/16/n4157143.md#1">铁路建设加持 东台湾房价半年涨三成</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/5/21/n4160516.md#1">叶匡时：花东铁路电气化拼观光</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/9/7/n2649202.md#1">南回铁路重建进度超前 台东段9/16通车</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/9/14/n2656780.md#1">南回铁路台东段15日通车  前3天免费</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/9/15/n2657619.md#1">南回铁路台东段通车  民众组团搭车</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/4/19/n4135387.md#1">电气化将通车  花东一日生活圈</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/4/28/n4142378.md#1">花莲南平站  2人感电灼伤</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/4/29/n4143103.md#1">花东线电气化  争改东华大学站</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/5/13/n4154119.md#1">花东铁路电气化  普悠玛88折</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/5/13/n4154612.md#1">普悠玛首优惠  88折惠7千人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/5/16/n4157143.md#1">铁路建设加持 东台湾房价半年涨三成</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/5/21/n4160516.md#1">叶匡时：花东铁路电气化拼观光</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/15/n12882802.md#1">【未解之谜】三星堆文明究竟源自哪里？</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/3/3/n12785986.md#1">【命理】为何三年前后看相结果大不同？</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/2/26/n12777808.md#1">《三国演义》中的高人：神卜、神医和隐士</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/16/n12885150.md#1">【未解之谜】报恩的白牛 印度男孩五次转生</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/13/n12877592.md#1">【未解之谜】希尔夫妇被外星人绑架的惊悚经历</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12891408.md#1">【秦鹏直播】美日法英德史上首次军演 目标是谁</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/20/n12893178.md#1">【财商天下】中国GDP增长18%？藏糟心账本</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/20/n12892786.md#1">【唐浩视界】隐忍50年 日本为何挺台叫板中共？</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12889946.md#1">澎恰恰欠2亿债 吴申梅愿借钱度难关</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12890581.md#1">马云遭劫内幕：豪华饭局惹妒 风头盖刘鹤</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12891289.md#1">【远见快评】中共回应突降调 美日舰围观辽宁号</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12889946.md#1">澎恰恰欠2亿债 吴申梅愿借钱度难关</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/20/n12891489.md#1">新剧演少女体形遭酸 刘涛直播卸妆引热议</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/18/n12887909.md#1">黄秋生又来台接受隔离 申请就业金卡已获准</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/18/n12888429.md#1">赵丽颖台上不慎掉耳环 救场四步骤获赞超专业</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/18/n12888617.md#1">吐槽一男子开车乱扔烟头 舒淇获赞生气也可爱</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12890260.md#1">意大利面大厨：避免几个常见错误 煮面更好吃</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/11/n12872973.md#1">灭活疫苗存两风险？中国疫苗三大问题解析</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12889678.md#1">美国农夫说 鸡蛋要这样摆放才能保持新鲜</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/19/n12889418.md#1">前世有仇？ 美国大鸟丢鱼砸到卡车挡风玻璃</a></li>
-<li><a href="https://github.com/gvyvpc327/djy/blob/master/gb/21/4/18/n12887762.md#1">南非小狗落水快淹死 同伴花34分钟奋力相救</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gvyvpc327/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gvyvpc327/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/6/11/n4176216.htm">花东铁路秀愿景 朝一日生活圈迈进</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/6/11/n4176216.htm">花东铁路秀愿景 朝一日生活圈迈进</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gvyvpc327/djy/blob/master/gb/14/6/11/n4176216.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gvyvpc327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gvyvpc327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gvyvpc327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gvyvpc327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gvyvpc327/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/14/6/11/n4176216.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
